# open-radar

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NOTICE  README.md  RELEASE_CHECKLIST.md  VISUALIZATION.md  docker-compose.yml  gcloud_debug.html  pyproject.toml  run_public_access.bat  run_visual_dashboard.bat
alembic/: env.py
alembic/versions/: 1e4c3f8c6a08_widen_pe_firms_hq_country.py  408bb192a7ba_add_scoring_config_recommendations.py  63855373bde4_add_exclusion_reason_to_companies.py  68db917183b1_initial_postgres_schema.py  823def1a6467_add_capability_tables.py  994a24fc74ad_add_scoring_events_audit_table.py  a054567d313e_add_risk_level_to_tracking_alerts.py  a1b2c3d4e5f6_add_revenue_source_to_companies.py  a1b2c3d4e5f6_vc_holdings_junction_drop_portfolio_copy.py  a27b3e8c28b5_add_canon_proposals.py  b2c3d4e5f6a7_add_extraction_complete_at.py  d16997d5768d_add_hq_city_and_sub_sector_to_companies.py  d6e7f8a9b0c1_add_vc_holding_status_exited.py  d7440c695f76_add_canon_tables.py  e661f8adf73e_add_resilience_tables.py  f1a2b3c4d5e6_add_vc_portfolio_intelligence_tables.py  f7a8b9c0d1e2_add_document_ingestion_tables.py
config/: thesis.example.yaml
docs/: ARCHITECTURE.md  ENRICHMENT_FIXES.md  GETTING_STARTED.md  LINKEDIN_SETUP.md  TEST_SUMMARY_ENRICHMENT_FIXES.md  prompt_4_audit_trail.md  remote_access.md
docs/design/: custom_investment_thesis.md
docs/md/: 00_index.md  01_architecture.md  02_core.md  03_universe.md  04_intelligence.md  05_capital.md  06_competitive.md  07_carveout.md  08_relationships_tracker.md  09_web_api.md  10_workflows.md  11_tracker.md  12_relationships.md  13_llm_strategy.md  14_data_models.md  thesis_validator.md
docs/specs/: module10_capital_flows.md  module11_carveout_scanner.md  module12_context_engine.md  module1_universe_scanner.md  module2_competitive_radar.md  module6_market_intel.md
scripts/: README.md
scripts/canonical/: backfill_scoring_data.py  bootstrap_universe.py  comprehensive_discovery.py  enrich_companies.py  enrich_general.py  force_rescore.py  generate_report_only.py  health_check.py  run_agent_scraper.py  run_autonomous.bat  run_daily_pipeline.py  run_intel_scan.py  run_investigation.py  run_public.py  run_trend_detection.py  setup_linkedin_auth.py
src/: __init__.py
src/alerts/: __init__.py  alert_engine.py  service.py  (+2 more)
tests/: conftest.py
(+317 files in other folders)
